# brokerchat

backend/: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  basedb.sql  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_cadence_schema.py  0003_cadence_add_proximo_step_em.py  0004_configuracao_empresa.py  0005_uazapi_config.py  0006_conexao_uazapi_status.py  0007_chat_wa_fields.py
backend/app/: main.py
backend/app/api/routes/: admin_crud.py  admin_ops.py  auth.py  cadence.py  configuracao.py  health.py  inbox.py  webhooks.py
backend/app/api/schemas/: schemas.py
backend/app/core/: celery_app.py  config.py  database.py  logging.py  redis.py  security.py  storage.py
backend/app/domain/enums/: enums.py
backend/app/domain/models/: models.py
backend/app/graphs/: graphs.py  llm_provider.py  registry.py  state.py
backend/app/graphs/nodes/: agent_nodes.py
backend/app/graphs/prompts/: agent_prompts.py
backend/app/providers/uazapi/: adapter.py  (+2 more)
backend/app/repositories/: base.py  cadence.py  chat.py  conexao.py  contato.py  crud.py  evento_webhook.py  mensagem.py  oportunidade.py
backend/app/services/: agent_execution.py  cadence.py  chat.py  contact.py  inbox.py  message.py  opportunity.py  property.py  routing.py  uazapi.py  webhook_event.py
backend/app/workers/: db.py
backend/scripts/: init-db.sh  seed.py
backend/tests/: conftest.py  test_chat.py  test_health.py  test_mapper.py  test_message.py  test_routing.py  test_webhook_dedup.py  test_webhook_flow.py
(+442 files in other folders)
